--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=testing
+APP_KEY=base64:5KE62tqVDoHCpdprUkpiXwYrIRb2npnMlRRfqqDbdiA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
